--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ var iconStyle = new ol.style.Style({
 
 
 var source1 = new ol.source.Vector({
-  url: 'plzBonn.json',
+  url: 'https://raw.githubusercontent.com/narges1212/testfileshare/master/plzBonn.json',
   format: new ol.format.GeoJSON()
 });
 
